2011-10-20  Leandro Pereira  <leandro@profusion.mobi>

        Unreviewed. Add part of EFL baselines for the fast/ suite.

        * platform/efl/fast: Added.
        * platform/efl/fast/backgrounds: [...]
        * platform/efl/fast/block: [...]
        * platform/efl/fast/body-propagation: [...]
        * platform/efl/fast/borders: [...]
        * platform/efl/fast/box-shadow: [...]
        * platform/efl/fast/box-sizing: [...]
        * platform/efl/fast/canvas: [...]
        * platform/efl/fast/clip: [...]
        * platform/efl/fast/compact: [...]
        * platform/efl/fast/css: [...]
        * platform/efl/fast/css-generated-content: [...]

2011-10-20  Zoltan Arvai  <zarvai@inf.u-szeged.hu>

        [Qt] Removing test from Skipped list. Test passes: fast/text/justify-padding-distribution.html
        https://bugs.webkit.org/show_bug.cgi?id=40584

        Reviewed by Andreas Kling.

        * platform/qt/Skipped:

2011-10-20  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Advanced search results should keep working after pretty print toggled.
        https://bugs.webkit.org/show_bug.cgi?id=70347

        Reviewed by Pavel Feldman.

        * inspector/debugger/raw-source-code.html:

2011-10-20  Leandro Pereira  <leandro@profusion.mobi>

        Unreviewed. Add EFL baselines for dom, editing, fonts, mathml, media, printing, scrollbars and security.

        * platform/efl/dom: [...]
        * platform/efl/editing: [...]
        * platform/efl/fonts: [...]
        * platform/efl/mathml: [...]
        * platform/efl/media: [...]
        * platform/efl/printing: [...]
        * platform/efl/scrollbars: [...]
        * platform/efl/security: [...]

2011-10-20  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Move qt-4.8 platform to qt platform.

        Now Qt 4.8 results are default, 4.7 results aren't supported anymore.

        * platform/qt: [...]
        * platform/qt-4.8: [...]

2011-10-20  Leandro Pereira  <leandro@profusion.mobi>
