@@ -1,0 +1,39 @@
+This tests basic single touch gesture generation.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+have received: 1 touch events
+have received: 2 touch events
+PASS event.type is "mousemove"
+PASS event.clientX is 20
+PASS event.clientY is 24
+PASS event.shiftKey is true
+PASS event.altKey is true
+PASS event.ctrlKey is false
+PASS event.metaKey is false
+PASS event.type is "mousedown"
+PASS event.clientX is 20
+PASS event.clientY is 24
+PASS event.shiftKey is true
+PASS event.altKey is true
+PASS event.ctrlKey is false
+PASS event.metaKey is false
+PASS event.type is "mouseup"
+PASS event.clientX is 20
+PASS event.clientY is 24
+PASS event.shiftKey is true
+PASS event.altKey is true
+PASS event.ctrlKey is false
+PASS event.metaKey is false
+PASS event.type is "click"
+PASS event.clientX is 20
+PASS event.clientY is 24
+PASS event.shiftKey is true
+PASS event.altKey is true
+PASS event.ctrlKey is false
+PASS event.metaKey is false
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
